# promlint

./: .gitignore  README.md  pyproject.toml
src/promlint/: cli.py  config.py  loader.py  model.py  promql.py  report.py
src/promlint/checks/: __init__.py  aggregation_labels.py  base.py  counter_without_rate.py  duplicate_expression.py  missing_annotations.py  missing_for.py  missing_severity_label.py  short_rate_window.py
tests/: conftest.py  test_checks.py  test_cli.py  test_config.py  test_loader.py  test_promql.py  test_report.py
tests/fixtures/: bad_rules.yml  good_rules.yml  realistic.yml
